--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
-PORT = 3000 #3000 by default
+PORT = 3000 # 3000 by default
+
+# These variables are only required if manually hosting with https
 SSL_KEY = "INSERT SSL KEY HERE"
 SSL_CERT = "INSERT SSL CERT HERE"
